[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/city.png" type="Texture" id=1]
[ext_resource path="res://assets/StandardFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://SettingsMenu.gd" type="Script" id=3]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -287.0
margin_right = 29.0
margin_bottom = 169.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundCheckButton" type="CheckButton" parent="VBoxContainer"]
margin_right = 406.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Sound Effects"

[node name="MusicCheckButton" type="CheckButton" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 406.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Music"

[node name="NoCursiveCheckButton" type="CheckButton" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 406.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Cursive fonts"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 261.0
margin_right = 406.0
margin_bottom = 306.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 0
[connection signal="toggled" from="VBoxContainer/SoundCheckButton" to="." method="_on_SoundCheckButton_toggled"]
[connection signal="toggled" from="VBoxContainer/MusicCheckButton" to="." method="_on_MusicCheckButton_toggled"]
[connection signal="toggled" from="VBoxContainer/NoCursiveCheckButton" to="." method="_on_NoCursiveCheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
